--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,13 @@
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "axios": "^1.9.0",
+    "react-router-dom": "^7.6.2"
   }
 }
