--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
+    "node-cache": "^5.1.2",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
