--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "axios": "^1.9.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2"
   }
